src/validation/tests/snapshots/rusty__validation__tests__array_validation_test__array_assignment_function_call.snap
---
source: src/validation/tests/array_validation_test.rs
expression: diagnostics
---
error[E037]: Invalid assignment: cannot assign 'ARRAY [0..3] OF USINT' to 'ARRAY[0..1] OF USINT'
   ┌─ <internal>:16:13
   │
16 │             arr_incorrect_size  := foo(); // We want a invalid size array error here
   │             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'ARRAY [0..3] OF USINT' to 'ARRAY[0..1] OF USINT'

error[E043]: Too many initial values for array `arr_incorrect_size`. Expected 2, found 4.
   ┌─ <internal>:16:36
   │
16 │             arr_incorrect_size  := foo(); // We want a invalid size array error here
   │                                    ^^^^^^ Too many initial values for array `arr_incorrect_size`. Expected 2, found 4.
